scriptax/grammar/build/Ah3Parser.py
# Generated from D:/Programming/Projects/Apitax/Scriptax/scriptax/grammar/src\Ah3.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class Ah3Parser ( Parser ):

    grammarFileName = "Ah3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'>='", "'<='", "'=='", "'!='", "'&&'", 
                     "'||'", "'++'", "'--'", "'+='", "'-='", "'*='", "'/='", 
                     "'='", "'+'", "'-'", "'*'", "'/'", "'^'", "'!'", "'_'", 
                     "'.'", "':'", "'%'", "','", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'{%'", "'%}'", "<INVALID>", "<INVALID>", 
                     "'{'", "'}'", "'('", "')'", "'['", "']'", "'$'", "';'", 
                     "'#'", "'->'", "'@'" ]

    symbolicNames = [ "<INVALID>", "AND", "OR", "GT", "LT", "GE", "LE", 
                      "EQ", "NEQ", "SAND", "SOR", "D_PLUS", "D_MINUS", "PE", 
                      "ME", "MUE", "DE", "EQUAL", "PLUS", "MINUS", "MUL", 
                      "DIV", "POW", "NOT", "ULINE", "DOT", "COLON", "PERCENT", 
                      "COMMA", "INT", "FLOAT", "FALSE", "TRUE", "STRING", 
                      "HEX", "NONE", "EXECUTEOPEN", "EXECUTECLOSE", "MUSTACHEOPEN", 
                      "MUSTACHECLOSE", "BLOCKOPEN", "BLOCKCLOSE", "LPAREN", 
                      "RPAREN", "SOPEN", "SCLOSE", "VARIABLE_ID", "TERMINATOR", 
                      "HASH", "ARROW", "AT", "RETURNS", "EACH", "IF", "THEN", 
                      "ELSE", "FOR", "WHILE", "ERROR", "TYPE_INT", "TYPE_DICT", 
                      "TYPE_LIST", "TYPE_DEC", "TYPE_STR", "TYPE_BOOL", 
                      "LOGIN", "LOG", "ENDPOINT", "SIG", "OPTIONS", "IMPORT", 
                      "DEL", "URL", "AUTH", "EXTENDS", "COMMANDTAX", "GET", 
                      "POST", "PUT", "PATCH", "DELETE", "SCRIPT", "API", 
                      "IN", "AS", "FROM", "SET", "ASYNC", "AWAIT", "NEW", 
                      "LABEL", "BLOCK_COMMENT", "LINE_COMMENT", "NEWLINE", 
                      "WS" ]

    RULE_prog = 0
    RULE_script_structure = 1
    RULE_global_statements = 2
    RULE_root_level_statements = 3
    RULE_statements = 4
    RULE_statement = 5
    RULE_terminated = 6
    RULE_non_terminated = 7
    RULE_execute_statement = 8
    RULE_expr = 9
    RULE_assignment = 10
    RULE_flow = 11
    RULE_create_instance = 12
    RULE_method_statement = 13
    RULE_method_call = 14
    RULE_if_statement = 15
    RULE_while_statement = 16
    RULE_for_statement = 17
    RULE_each_statement = 18
    RULE_condition = 19
    RULE_block = 20
    RULE_callback = 21
    RULE_callback_block = 22
    RULE_optional_parameters_block = 23
    RULE_sig_parameter_block = 24
    RULE_sig_parameter = 25
    RULE_call_parameter = 26
    RULE_optional_parameter = 27
    RULE_commandtax = 28
    RULE_execute = 29
    RULE_async_execute = 30
    RULE_await_statement = 31
    RULE_labels = 32
    RULE_label_comp = 33
    RULE_label = 34
    RULE_attribute = 35
    RULE_extends_statement = 36
    RULE_sig_statement = 37
    RULE_options_statement = 38
    RULE_delete_statement = 39
    RULE_error_statement = 40
    RULE_return_statement = 41
    RULE_login_statement = 42
    RULE_endpoint_statement = 43
    RULE_import_statement = 44
    RULE_casting = 45
    RULE_auth = 46
    RULE_log = 47
    RULE_count = 48
    RULE_reflection = 49
    RULE_inject = 50
    RULE_atom = 51
    RULE_atom_obj_dict = 52
    RULE_atom_obj_list = 53
    RULE_atom_string = 54
    RULE_atom_number = 55
    RULE_atom_boolean = 56
    RULE_atom_hex = 57
    RULE_atom_none = 58

    ruleNames =  [ "prog", "script_structure", "global_statements", "root_level_statements", 
                   "statements", "statement", "terminated", "non_terminated", 
                   "execute_statement", "expr", "assignment", "flow", "create_instance", 
                   "method_statement", "method_call", "if_statement", "while_statement", 
                   "for_statement", "each_statement", "condition", "block", 
                   "callback", "callback_block", "optional_parameters_block", 
                   "sig_parameter_block", "sig_parameter", "call_parameter", 
                   "optional_parameter", "commandtax", "execute", "async_execute", 
                   "await_statement", "labels", "label_comp", "label", "attribute", 
                   "extends_statement", "sig_statement", "options_statement", 
                   "delete_statement", "error_statement", "return_statement", 
                   "login_statement", "endpoint_statement", "import_statement", 
                   "casting", "auth", "log", "count", "reflection", "inject", 
                   "atom", "atom_obj_dict", "atom_obj_list", "atom_string", 
                   "atom_number", "atom_boolean", "atom_hex", "atom_none" ]

    EOF = Token.EOF
    AND=1
    OR=2
    GT=3
    LT=4
    GE=5
    LE=6
    EQ=7
    NEQ=8
    SAND=9
    SOR=10
    D_PLUS=11
    D_MINUS=12
    PE=13
    ME=14
    MUE=15
    DE=16
    EQUAL=17
    PLUS=18
    MINUS=19
    MUL=20
    DIV=21
    POW=22
    NOT=23
    ULINE=24
    DOT=25
    COLON=26
    PERCENT=27
    COMMA=28
    INT=29
    FLOAT=30
    FALSE=31
    TRUE=32
    STRING=33
    HEX=34
    NONE=35
    EXECUTEOPEN=36
    EXECUTECLOSE=37
    MUSTACHEOPEN=38
    MUSTACHECLOSE=39
    BLOCKOPEN=40
    BLOCKCLOSE=41
    LPAREN=42
    RPAREN=43
    SOPEN=44
    SCLOSE=45
    VARIABLE_ID=46
    TERMINATOR=47
    HASH=48
    ARROW=49
    AT=50
    RETURNS=51
    EACH=52
    IF=53
    THEN=54
    ELSE=55
    FOR=56
    WHILE=57
    ERROR=58
    TYPE_INT=59
    TYPE_DICT=60
    TYPE_LIST=61
    TYPE_DEC=62
    TYPE_STR=63
    TYPE_BOOL=64
    LOGIN=65
    LOG=66
    ENDPOINT=67
    SIG=68
    OPTIONS=69
    IMPORT=70
    DEL=71
    URL=72
    AUTH=73
    EXTENDS=74
    COMMANDTAX=75
    GET=76
    POST=77
    PUT=78
    PATCH=79
    DELETE=80
    SCRIPT=81
    API=82
    IN=83
    AS=84
    FROM=85
    SET=86
    ASYNC=87
    AWAIT=88
    NEW=89
    LABEL=90
    BLOCK_COMMENT=91
    LINE_COMMENT=92
    NEWLINE=93
    WS=94

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def script_structure(self):
            return self.getTypedRuleContext(Ah3Parser.Script_structureContext,0)


        def EOF(self):
            return self.getToken(Ah3Parser.EOF, 0)

        def getRuleIndex(self):
            return Ah3Parser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = Ah3Parser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.script_structure()
            self.state = 119
            self.match(Ah3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Script_structureContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def global_statements(self):
            return self.getTypedRuleContext(Ah3Parser.Global_statementsContext,0)


        def root_level_statements(self):
            return self.getTypedRuleContext(Ah3Parser.Root_level_statementsContext,0)


        def statements(self):
            return self.getTypedRuleContext(Ah3Parser.StatementsContext,0)


        def getRuleIndex(self):
            return Ah3Parser.RULE_script_structure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScript_structure" ):
                listener.enterScript_structure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitScript_structure" ):
                listener.exitScript_structure(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitScript_structure" ):
                return visitor.visitScript_structure(self)
            else:
                return visitor.visitChildren(self)




    def script_structure(self):

        localctx = Ah3Parser.Script_structureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_script_structure)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.global_statements()
            self.state = 122
            self.root_level_statements()
            self.state = 123
            self.statements()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Global_statementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def import_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Ah3Parser.Import_statementContext)
            else:
                return self.getTypedRuleContext(Ah3Parser.Import_statementContext,i)


        def TERMINATOR(self, i:int=None):
            if i is None:
                return self.getTokens(Ah3Parser.TERMINATOR)
            else:
                return self.getToken(Ah3Parser.TERMINATOR, i)

        def sig_statement(self):
            return self.getTypedRuleContext(Ah3Parser.Sig_statementContext,0)


        def extends_statement(self):
            return self.getTypedRuleContext(Ah3Parser.Extends_statementContext,0)


        def options_statement(self):
            return self.getTypedRuleContext(Ah3Parser.Options_statementContext,0)


        def getRuleIndex(self):
            return Ah3Parser.RULE_global_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGlobal_statements" ):
                listener.enterGlobal_statements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGlobal_statements" ):
                listener.exitGlobal_statements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGlobal_statements" ):
                return visitor.visitGlobal_statements(self)
            else:
                return visitor.visitChildren(self)




    def global_statements(self):

        localctx = Ah3Parser.Global_statementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_global_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Ah3Parser.IMPORT or _la==Ah3Parser.FROM:
                self.state = 125
                self.import_statement()
                self.state = 126
                self.match(Ah3Parser.TERMINATOR)
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Ah3Parser.SIG:
                self.state = 133
                self.sig_statement()
                self.state = 134
                self.match(Ah3Parser.TERMINATOR)


            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Ah3Parser.EXTENDS:
                self.state = 138
                self.extends_statement()
                self.state = 139
                self.match(Ah3Parser.TERMINATOR)


            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Ah3Parser.OPTIONS:
                self.state = 143
                self.options_statement()
                self.state = 144
                self.match(Ah3Parser.TERMINATOR)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Root_level_statementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def method_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Ah3Parser.Method_statementContext)
            else:
                return self.getTypedRuleContext(Ah3Parser.Method_statementContext,i)


        def getRuleIndex(self):
            return Ah3Parser.RULE_root_level_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot_level_statements" ):
                listener.enterRoot_level_statements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot_level_statements" ):
                listener.exitRoot_level_statements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot_level_statements" ):
                return visitor.visitRoot_level_statements(self)
            else:
                return visitor.visitChildren(self)




    def root_level_statements(self):

        localctx = Ah3Parser.Root_level_statementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_root_level_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Ah3Parser.SCRIPT or _la==Ah3Parser.API:
                self.state = 148
                self.method_statement()
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Ah3Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Ah3Parser.StatementContext,i)


        def getRuleIndex(self):
            return Ah3Parser.RULE_statements

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatements" ):
                listener.enterStatements(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatements" ):
                listener.exitStatements(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatements" ):
                return visitor.visitStatements(self)
            else:
                return visitor.visitChildren(self)




    def statements(self):

        localctx = Ah3Parser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Ah3Parser.NOT) | (1 << Ah3Parser.MUSTACHEOPEN) | (1 << Ah3Parser.RETURNS) | (1 << Ah3Parser.EACH) | (1 << Ah3Parser.IF) | (1 << Ah3Parser.FOR) | (1 << Ah3Parser.WHILE) | (1 << Ah3Parser.ERROR))) != 0) or ((((_la - 66)) & ~0x3f) == 0 and ((1 << (_la - 66)) & ((1 << (Ah3Parser.LOG - 66)) | (1 << (Ah3Parser.DEL - 66)) | (1 << (Ah3Parser.AUTH - 66)) | (1 << (Ah3Parser.COMMANDTAX - 66)) | (1 << (Ah3Parser.GET - 66)) | (1 << (Ah3Parser.POST - 66)) | (1 << (Ah3Parser.PUT - 66)) | (1 << (Ah3Parser.PATCH - 66)) | (1 << (Ah3Parser.DELETE - 66)) | (1 << (Ah3Parser.SET - 66)) | (1 << (Ah3Parser.ASYNC - 66)) | (1 << (Ah3Parser.AWAIT - 66)) | (1 << (Ah3Parser.LABEL - 66)))) != 0):
                self.state = 154
                self.statement()
                self.state = 159
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def terminated(self):
            return self.getTypedRuleContext(Ah3Parser.TerminatedContext,0)


        def non_terminated(self):
            return self.getTypedRuleContext(Ah3Parser.Non_terminatedContext,0)


        def NOT(self):
            return self.getToken(Ah3Parser.NOT, 0)

        def getRuleIndex(self):
            return Ah3Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = Ah3Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 161
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Ah3Parser.NOT:
                self.state = 160
                self.match(Ah3Parser.NOT)


            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Ah3Parser.MUSTACHEOPEN, Ah3Parser.RETURNS, Ah3Parser.EACH, Ah3Parser.ERROR, Ah3Parser.LOG, Ah3Parser.DEL, Ah3Parser.AUTH, Ah3Parser.COMMANDTAX, Ah3Parser.GET, Ah3Parser.POST, Ah3Parser.PUT, Ah3Parser.PATCH, Ah3Parser.DELETE, Ah3Parser.SET, Ah3Parser.ASYNC, Ah3Parser.AWAIT, Ah3Parser.LABEL]:
                self.state = 163
                self.terminated()
                pass
            elif token in [Ah3Parser.IF, Ah3Parser.FOR, Ah3Parser.WHILE]:
                self.state = 164
                self.non_terminated()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TerminatedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TERMINATOR(self):
            return self.getToken(Ah3Parser.TERMINATOR, 0)

        def each_statement(self):
            return self.getTypedRuleContext(Ah3Parser.Each_statementContext,0)


        def return_statement(self):
            return self.getTypedRuleContext(Ah3Parser.Return_statementContext,0)


        def error_statement(self):
            return self.getTypedRuleContext(Ah3Parser.Error_statementContext,0)


        def delete_statement(self):
            return self.getTypedRuleContext(Ah3Parser.Delete_statementContext,0)


        def execute_statement(self):
            return self.getTypedRuleContext(Ah3Parser.Execute_statementContext,0)


        def method_call(self):
            return self.getTypedRuleContext(Ah3Parser.Method_callContext,0)


        def await_statement(self):
            return self.getTypedRuleContext(Ah3Parser.Await_statementContext,0)


        def assignment(self):
            return self.getTypedRuleContext(Ah3Parser.AssignmentContext,0)


        def log(self):
            return self.getTypedRuleContext(Ah3Parser.LogContext,0)


        def auth(self):
            return self.getTypedRuleContext(Ah3Parser.AuthContext,0)


        def getRuleIndex(self):
            return Ah3Parser.RULE_terminated

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerminated" ):
                listener.enterTerminated(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerminated" ):
                listener.exitTerminated(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerminated" ):
                return visitor.visitTerminated(self)
            else:
                return visitor.visitChildren(self)




    def terminated(self):

        localctx = Ah3Parser.TerminatedContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_terminated)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 167
                self.each_statement()
                pass

            elif la_ == 2:
                self.state = 168
                self.return_statement()
                pass

            elif la_ == 3:
                self.state = 169
                self.error_statement()
                pass

            elif la_ == 4:
                self.state = 170
                self.delete_statement()
                pass

            elif la_ == 5:
                self.state = 171
                self.execute_statement()
                pass

            elif la_ == 6:
                self.state = 172
                self.method_call()
                pass

            elif la_ == 7:
                self.state = 173
                self.await_statement()
                pass

            elif la_ == 8:
                self.state = 174
                self.assignment()
                pass

            elif la_ == 9:
                self.state = 175
                self.log()
                pass

            elif la_ == 10:
                self.state = 176
                self.auth()
                pass


            self.state = 179
            self.match(Ah3Parser.TERMINATOR)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Non_terminatedContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def flow(self):
            return self.getTypedRuleContext(Ah3Parser.FlowContext,0)


        def getRuleIndex(self):
            return Ah3Parser.RULE_non_terminated

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNon_terminated" ):
                listener.enterNon_terminated(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNon_terminated" ):
                listener.exitNon_terminated(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNon_terminated" ):
                return visitor.visitNon_terminated(self)
            else:
                return visitor.visitChildren(self)




    def non_terminated(self):
